directory restrcoring, linkes to be reworked partially

--- a/public/custom_agents.html
+++ b/public/custom_agents.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Custom Agents</title>
     <!-- Adjusted paths assuming server configuration serves static files from a 'static' directory -->
-    <link rel="stylesheet" href="../static/css/styles.css">
-    <link rel="stylesheet" href="../static/css/custom_agents.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/custom_agents.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script> <!-- Vue.js for progressive enhancement -->
 </head>
 
@@ -20,8 +20,8 @@
             </ul>
             <button id="newAgent">Make a New Agent</button>
             <button id="newWorkflow">Make New Workflow</button>
-            <img src="../static/images/Agent1.png" alt="Illustration of an AI agent" class="agent-image">
-            <img src="../static/images/Agent2.png" alt="Illustration of a second AI agent" class="agent-image">
+            <img src="/images/Agent1.png" alt="Illustration of an AI agent" class="agent-image">
+            <img src="/images/Agent2.png" alt="Illustration of a second AI agent" class="agent-image">
         </aside>
         <main class="main-container">
             <section class="custom-agent-creation">
@@ -71,7 +71,7 @@
             </section>
         </main>
     </div>
-    <script src="../static/js/custom_agents.js"></script>
+    <script src="/js/custom_agents.js"></script>
     <!-- Including Vue.js script for progressive enhancement -->
     <script>
         new Vue({
