--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Code Generator Chat Interface</title>
     <!-- Adjusted the paths to ensure they work correctly based on server configuration -->
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
     <header>
         <!-- Improved accessibility by adding more descriptive alt text -->
-        <a href="custom_agents.html" class="button">Create Custom Agents</a>
-        <img src="../static/images/roboFace.png" alt="Robot face logo representing the coder" class="header-logo">
+        <a href="/public/custom_agents.html" class="button">Create Custom Agents</a>
+        <img src="/images/roboFace.png" alt="Robot face logo representing the coder" class="header-logo">
     </header>
     <main>
         <div class="container">
@@ -42,7 +42,7 @@
         </div>
     </main>
     <!-- Corrected script path based on server configuration -->
-    <script src="../static/js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
 </body>
 
 </html>
